Remove a pref that forces directwrite on when D2D is blocked. (bug 1193641, r=milan)